# intervals-general

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-tool-checks.yml  release.yml
benches/: interval_operations.rs  static_alternative.rs
src/: bound_pair.rs  interval.rs  lib.rs
