[package]
name = "intervals-general"
version = "0.1.1"
authors = ["Scott Moeller <electronjoe@gmail.com>"]
description = """
intervals-general is a crate enabling general representation of and
operations on intervals over generic types (e.g. supporting units of measure
or arbitrary built-in types, or any type with PartialOrd implementation).
"""
documentation = "https://github.com/electronjoe/intervals-general"
homepage = "https://github.com/electronjoe/intervals-general"
repository = "https://github.com/electronjoe/intervals-general"
readme = "README.md"
keywords = ["intervals", "interval", "math", "units", "measurement"]
categories = ["science", "data-structures"]
edition = "2021"
license = "MIT OR Apache-2.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
itertools = "0.13.0"
serde = { version = "1.0.203", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.2"
quickcheck = "0.8"
quickcheck_macros = "0.8"

[[bench]]
name = "static_alternative"
harness = false

[[bench]]
name = "interval_operations"
harness = false

[profile.bench]
lto = true # Critical for performance (87% reduction of e.g. intersect)
